--- a/app/src/main/res/layout/fragment_stock.xml
+++ b/app/src/main/res/layout/fragment_stock.xml
@@ -5,7 +5,8 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    tools:context=".StockFragment">
+    tools:context=".StockFragment"
+    android:background="@drawable/orqa_fon3">
 
     <LinearLayout
         android:background="@drawable/top_shape"
