--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -51,6 +51,14 @@
             android:id="@+id/save"
             android:layout_margin="5dp"/>
 
+        <RadioButton
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Is Have"
+            android:textSize="20sp"
+            android:textColor="@color/white"
+            android:id="@+id/radio_btn"/>
 
     </LinearLayout>
     <LinearLayout
