--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".AddFragment"
     android:orientation="vertical"
-    android:background="@drawable/orqa_fon3">
+    >
 
 
     <LinearLayout
@@ -52,6 +52,7 @@
             android:layout_margin="5dp"/>
 
         <RadioButton
+            android:selectAllOnFocus="false"
             android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
