--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -18,6 +18,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:src="@drawable/ic_str" />
+
+
     </LinearLayout>
 
     <LinearLayout
@@ -28,28 +30,43 @@
         android:orientation="vertical"
         android:padding="10dp">
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/user_name"
+        <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:background="@drawable/ic_login_password"
-            android:hint="    User nme"
             android:textColorHint="@color/white"
-            android:textSize="20sp"
-            app:counterTextColor="@color/white" />
+            app:hintTextColor="@color/white">
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/phone_number"
+            <com.google.android.material.textfield.TextInputEditText
+                android:background="@drawable/ic_edit_text"
+                android:id="@+id/user_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:hint="    User nme"
+                android:textSize="20sp"
+                android:textColor="@color/white"
+                android:textColorHint="@color/white"/>
+        </com.google.android.material.textfield.TextInputLayout>
+
+
+        <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:background="@drawable/ic_login_password"
-            android:hint="    Phone number"
-            android:inputType="phone"
-            android:textColor="@color/white"
             android:textColorHint="@color/white"
-            android:textSize="20sp" />
+            app:hintTextColor="@color/white">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:background="@drawable/ic_edit_text"
+                android:id="@+id/phone_number"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:hint="    Phone number"
+                android:inputType="phone"
+                android:textColor="@color/white"
+                android:textColorHint="@color/white"
+                android:textSize="20sp" />
+        </com.google.android.material.textfield.TextInputLayout>
 
 
     </LinearLayout>
@@ -61,14 +78,14 @@
         android:gravity="center_horizontal">
 
         <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/button"
             android:selectAllOnFocus="true"
             android:text="Send massage"
             android:textColor="@color/white"
-            android:textSize="20sp"
-            android:id="@+id/btn"/>
+            android:textSize="20sp" />
     </LinearLayout>
 
 </LinearLayout>
