--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".AddFragment"
     android:orientation="vertical"
-    >
+    tools:context=".AddFragment">
 
 
     <LinearLayout
@@ -14,59 +13,54 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:gravity="center">
+
         <ImageView
             android:id="@+id/foto"
             android:layout_width="150dp"
             android:layout_height="150dp"
-            android:src="@drawable/ic_add_galarey"/>
+            android:src="@drawable/ic_add_galarey" />
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:orientation="vertical"
-        android:gravity="center">
+        android:gravity="center"
+        android:orientation="vertical">
+
         <com.google.android.material.textfield.TextInputEditText
-            android:layout_margin="5dp"
             android:id="@+id/product_name"
-            android:textColorHint="@color/white"
-            android:hint="  Prodact name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/ic_edit_text"/>
+            android:layout_margin="5dp"
+            android:background="@drawable/ic_edit_text"
+            android:hint="  Prodact name"
+            android:textColorHint="@color/white" />
 
         <com.google.android.material.textfield.TextInputEditText
-            android:layout_margin="5dp"
-            android:textColorHint="@color/white"
             android:id="@+id/product_soni"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:background="@drawable/ic_edit_text"
             android:hint="  Prodact quantity"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/ic_edit_text"/>
-        <com.google.android.material.button.MaterialButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="save"
-            app:backgroundTint="#FF699BF7"
-            android:id="@+id/save"
-            android:layout_margin="5dp"/>
+            android:textColorHint="@color/white" />
 
-        <RadioButton
-            android:selectAllOnFocus="false"
-            android:layout_gravity="center"
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/save"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Is Have"
-            android:textSize="20sp"
-            android:textColor="@color/white"
-            android:id="@+id/radio_btn"/>
+            android:layout_margin="5dp"
+            android:text="save"
+            app:backgroundTint="#FF699BF7" />
+
 
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1"/>
-
+        android:layout_weight="1" />
 
 
 </LinearLayout>
