--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,6 +9,7 @@
 
 
     <SearchView
+        android:id="@+id/search"
         android:queryHint="SEARCH"
         android:iconifiedByDefault="false"
         app:layout_constraintRight_toRightOf="parent"
@@ -16,4 +17,20 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+    <LinearLayout
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/search"
+        android:orientation="vertical">
+        <androidx.recyclerview.widget.RecyclerView
+            tools:listitem="@layout/item_prodact"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/rv_oneDAy"/>
+
+    </LinearLayout>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
