--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -25,6 +25,7 @@
         app:layout_constraintTop_toBottomOf="@+id/search"
         android:orientation="vertical">
         <androidx.recyclerview.widget.RecyclerView
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:listitem="@layout/item_prodact"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
