--- a/app/src/main/res/layout/item_prodact.xml
+++ b/app/src/main/res/layout/item_prodact.xml
@@ -11,7 +11,8 @@
         android:layout_height="wrap_content"
         app:cardElevation="5dp"
         app:cardUseCompatPadding="true"
-        app:cardCornerRadius="15dp">
+        app:cardCornerRadius="15dp"
+        app:cardBackgroundColor="#4000">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -19,6 +20,7 @@
             android:layout_margin="5dp">
 
             <ImageView
+                android:src="@drawable/ic_people"
                 android:layout_margin="2dp"
                 android:id="@+id/image_pr"
                 android:layout_width="80dp"
@@ -31,7 +33,7 @@
                 android:id="@+id/prodact_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Prodact"
+                android:text="Last costumer"
                 android:textColor="@color/black"
                 android:textSize="25sp"
                 android:textStyle="bold"
