--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -3,7 +3,9 @@
     <item
         android:id="@+id/homeFragment"
         android:icon="@drawable/ic_home"
-        android:title="HOME"/>
+        android:title="HOME"
+        android:checked="true"
+        />
     <item
         android:id="@+id/stockFragment"
         android:icon="@drawable/ic_sklad"
