--- a/app/src/main/res/layout/item_prodact.xml
+++ b/app/src/main/res/layout/item_prodact.xml
@@ -3,21 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="10dp"
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardElevation="5dp"
         app:cardUseCompatPadding="true"
         app:cardCornerRadius="15dp"
         app:cardBackgroundColor="#4000">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="5dp">
+            android:layout_height="match_parent">
 
             <ImageView
                 android:src="@drawable/ic_people"
