--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -60,7 +60,13 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:gravity="center">
+        <ImageView
+            android:layout_width="250dp"
+            android:layout_height="225dp"
+            android:id="@+id/gallarey_image"/>
+    </LinearLayout>
 
 
 </LinearLayout>
