--- a/app/src/main/res/layout/fragment_ombor.xml
+++ b/app/src/main/res/layout/fragment_ombor.xml
@@ -10,7 +10,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/top_shape"
-        android:layout_weight="9"/>
+        android:layout_weight="9"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="25.215.000 "
+            android:textColor="@color/white"
+            android:layout_gravity="center_vertical||center_horizontal"
+            android:textSize="25sp"/>
+    </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
