--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -63,6 +63,7 @@
         android:layout_weight="1"
         android:gravity="center">
         <ImageView
+            android:visibility="invisible"
             android:layout_width="250dp"
             android:layout_height="225dp"
             android:id="@+id/gallarey_image"/>
