--- a/app/src/main/res/layout/fragment_ombor.xml
+++ b/app/src/main/res/layout/fragment_ombor.xml
@@ -17,7 +17,7 @@
             android:layout_height="wrap_content"
             android:text="25.215.000 "
             android:textColor="@color/white"
-            android:layout_gravity="center_vertical||center_horizontal"
+            android:layout_gravity="center_vertical"
             android:textSize="25sp"/>
     </LinearLayout>
     <LinearLayout
