--- a/app/src/main/res/layout/item_for_ombor.xml
+++ b/app/src/main/res/layout/item_for_ombor.xml
@@ -29,21 +29,31 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <com.google.android.material.textfield.TextInputLayout
-                app:boxBackgroundColor="@color/white"
-                android:layout_marginRight="20dp"
-                android:layout_width="152dp"
+
+            <androidx.cardview.widget.CardView
+                android:padding="10dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent">
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:cardCornerRadius="15dp"
+                app:cardBackgroundColor="#5000">
+                <com.google.android.material.textfield.TextInputLayout
+                    app:boxBackgroundColor="@color/white"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:layout_width="match_parent"
+                        android:inputType="number"
+                        android:layout_height="wrap_content"
+                        android:hint="7.000"
+                        android:textStyle="bold"
+                        android:textSize="17sp"/>
+                </com.google.android.material.textfield.TextInputLayout>
+            </androidx.cardview.widget.CardView>
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="Prise"
-                    android:textSize="20sp"/>
-            </com.google.android.material.textfield.TextInputLayout>
+
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
